--- a/src/extension/vault/css/switch.css
+++ b/src/extension/vault/css/switch.css
@@ -22,5 +22,7 @@
   border-radius: 50%;
   background-color: #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  transition: transform 0.25s ease, background-color 0.25s ease;
+  transition:
+    transform 0.25s ease,
+    background-color 0.25s ease;
 }
